--- a/doc/Ex01.md
+++ b/doc/Ex01.md
@@ -2,7 +2,8 @@
 ###### tags `uni-rostock` `HPC`
 
 ## Task 1.1: Systems share of supercomputer architectures
-**Question:**
+**Question**
+
 How are the architectures represented in the top group of high-performance computing systems?
 
 **Answer**
@@ -24,3 +25,25 @@ The major variants are SIMD (Single Instruction, Multiple Data) and MIMD (Multip
 MPPs can be a bitch to program and are of use only on algorithms that are embarrassingly parallel (that's actually what they call it). However, if you have such a problem, then an MPP can be shockingly fast. They are also incredibly expensive.
 > credit: [Peter Rowell, MatthewMartin](https://stackoverflow.com/questions/5570936/what-is-the-difference-between-a-cluster-and-mpp-supercomputer-architecture)
 
+## Task 1.2: Performance measures for parallel work
+**Question**
+
+Name and explain the parameters for the performance gain through parallelization.
+
+**Answer:**
+
+For an parallel program, the speed up can can defined as:
+<img src="https://render.githubusercontent.com/render/math?math=S_n = T_1 / T_n">
+* <img src="https://render.githubusercontent.com/render/math?math=S_n">: Speed up
+* <img src="https://render.githubusercontent.com/render/math?math=T_1">: Time consume using 1 processor
+* <img src="https://render.githubusercontent.com/render/math?math=T_n">: Time consume using n processor
+
+Theoritically <img src="https://render.githubusercontent.com/render/math?math=S_n < n">, and <img src="https://render.githubusercontent.com/render/math?math=S_n"> decays when <img src="https://render.githubusercontent.com/render/math?math=n"> goes higher. However, sometimes the effect of memory hierarchy makes <img src="https://render.githubusercontent.com/render/math?math=S_n > n"> in practice.
+
+Effeciency: <img src="https://render.githubusercontent.com/render/math?math=E_n = S_n / n">
+
+An ideal parallel program has its effencieny equal to 1.
+
+Scalability: high efficiency even with large processor numbers
+. Kind of like
+<img src="https://render.githubusercontent.com/render/math?math=E_\infty">
