--- a/doc/Ex01.md
+++ b/doc/Ex01.md
@@ -47,3 +47,61 @@ An ideal parallel program has its effencieny equal to 1.
 Scalability: high efficiency even with large processor numbers
 . Kind of like
 <img src="https://render.githubusercontent.com/render/math?math=E_\infty">
+
+## Task 1.3: Limits of scalability
+**Question**
+
+Name and explain the laws about the maximum achievable speedup.
+
+**Answer**
+
+Amdahl's law consider a fixed amount of work.
+A task can be separated by sequential part s and parallel part p. The sequential part cannot be parallelized.
+
+<img src="https://render.githubusercontent.com/render/math?math=0 < s < 1">
+
+<img src="https://render.githubusercontent.com/render/math?math=s %2B p = 1">
+
+With <img src="https://render.githubusercontent.com/render/math?math=n"> processors, the maximum of speed up is <img src="https://render.githubusercontent.com/render/math?math=S_{max} = \frac{1}{s %2B p/n}">. When <img src="https://render.githubusercontent.com/render/math?math=n"> approaches to infinity, <img src="https://render.githubusercontent.com/render/math?math=S_{max} = \frac{1}{s}">
+
+
+Gustafson's law assume amount of works growth with systems size.
+
+<img src="https://render.githubusercontent.com/render/math?math=S_{max} = s %2B pn">
+
+## Task 1.4: Character constants in C
+**Question**
+What do you understand by character constants? Give the numeric values of the lower letters ‘a’, ‘b’,
+and ‘z’ according to the ASCII table.
+
+**Answer**
+
+Characters are reprensented by integer numbers. The mapping is called ASCII TABLE, mapping numbers 0-255 to characters.
+* 'a': 97
+* 'b': 98
+* 'z': 122
+* 'A': 65
+
+## Task 1.5: Escape sequences in C
+**Question**
+
+What do you understand by escape sequences? Give the numeric values of the escape sequences that
+you got to know in the lecture according to the ASCII table.
+
+**Answer**
+Escape sequence is a sequence of characters that does not represent itself, but is translated into another character or a sequence of characters that my be difficult to represent directly. Examples are *newline*, *tab*, *backspace*, and *carriage return*.
+
+|Symbol|Ascii (Hex.)|Description|
+|:--:|--|--|
+|\\t|0x09|Inserts a tab in the text at this point.|
+|\\b|0x08|Inserts a backspace in the text at this point.|
+|\\n|0x0A|Inserts a newline in the text at this point.|
+|\\r|0x0D|Inserts a carriage return in the text at this point.|
+|\\f|0x0C|Inserts a form feed in the text at this point. (It skips to the start of the next page.)|
+|\\'|0x27|Inserts a single quote character in the text at this point.|
+|\\"|0x22|Inserts a double quote character in the text at this point.|
+| \\\ |0x5C|Inserts a double quote character in the text at this point.|
+
+
+## Optional Task 1.6: Conversions in C
+To be added
