--- a/doc/Ex01.md
+++ b/doc/Ex01.md
@@ -1,6 +1,13 @@
 # HPC exercise 01
 ###### tags `uni-rostock` `HPC`
 
+## Table of Contents
+* [Task1.1](#Task-1.1:-Systems-share-of-supercomputer-architectures)
+* [Task1.2]()
+* [Task1.3]()
+* [Task1.4]()
+* [Task1.5]()
+
 ## Task 1.1: Systems share of supercomputer architectures
 **Question**
 
