--- a/doc/Ex01.md
+++ b/doc/Ex01.md
@@ -2,13 +2,16 @@
 ###### tags `uni-rostock` `HPC`
 
 ## Table of Contents
-* [Task1.1](#Task-1.1:-Systems-share-of-supercomputer-architectures)
+<!--ts-->
+* [Task1.1](#t1)
 * [Task1.2]()
 * [Task1.3]()
 * [Task1.4]()
 * [Task1.5]()
+<!--te-->
 
-## Task 1.1: Systems share of supercomputer architectures
+<a name="t1">
+## Task 1.1 Systems share of supercomputer architectures
 **Question**
 
 How are the architectures represented in the top group of high-performance computing systems?
