--- a/doc/Ex01.md
+++ b/doc/Ex01.md
@@ -4,10 +4,10 @@
 ## Table of Contents
 <!--ts-->
 * [Task1.1](#t1)
-* [Task1.2]()
-* [Task1.3]()
-* [Task1.4]()
-* [Task1.5]()
+* [Task1.2](#t2)
+* [Task1.3](#t3)
+* [Task1.4](#t4)
+* [Task1.5](#t5)
 <!--te-->
 
 <a name="t1">
@@ -36,6 +36,8 @@ The major variants are SIMD (Single Instruction, Multiple Data) and MIMD (Multip
 MPPs can be a bitch to program and are of use only on algorithms that are embarrassingly parallel (that's actually what they call it). However, if you have such a problem, then an MPP can be shockingly fast. They are also incredibly expensive.
 > credit: [Peter Rowell, MatthewMartin](https://stackoverflow.com/questions/5570936/what-is-the-difference-between-a-cluster-and-mpp-supercomputer-architecture)
 
+<a name="t2">
+  
 ## Task 1.2: Performance measures for parallel work
 **Question**
 
@@ -59,6 +61,8 @@ Scalability: high efficiency even with large processor numbers
 . Kind of like
 <img src="https://render.githubusercontent.com/render/math?math=E_\infty">
 
+<a name="t3">
+  
 ## Task 1.3: Limits of scalability
 **Question**
 
@@ -80,6 +84,8 @@ Gustafson's law assume amount of works growth with systems size.
 
 <img src="https://render.githubusercontent.com/render/math?math=S_{max} = s %2B pn">
 
+<a name="t4">
+  
 ## Task 1.4: Character constants in C
 **Question**
 What do you understand by character constants? Give the numeric values of the lower letters ‘a’, ‘b’,
@@ -93,6 +99,8 @@ Characters are reprensented by integer numbers. The mapping is called ASCII TABL
 * 'z': 122
 * 'A': 65
 
+<a name="t5">
+  
 ## Task 1.5: Escape sequences in C
 **Question**
 
